// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render areas.content - value[0] 1`] = `
<div
  id="areas.content"
>
  <div
    id="areas.content_popup"
  />
</div>
`;

exports[`Render default - value[0] 1`] = `
<div
  id="default"
>
  <div
    id="default_popup"
  />
</div>
`;

exports[`Render properties.title - value[0] 1`] = `
<div
  id="properties.title"
>
  <div
    id="properties.title_popup"
  />
</div>
`;

exports[`Test Schema areas.content 1`] = `true`;

exports[`Test Schema areas.content 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.title 1`] = `true`;

exports[`Test Schema properties.title 2`] = `null`;
